default.css: fix minor /index issue noticed by MarkOtaris (line-height was too narrow which made the section headers cut off swashes like the 'Q')

--- a/css/default.css
+++ b/css/default.css
@@ -1695,7 +1695,7 @@ body.siteIndex #abstract {
     */
 body.siteIndex section:not(.collapse) > h1:first-child {
     font-size: 1.5em;
-    line-height: 0.875;
+    line-height: 1.125;
     box-shadow: none;
     text-align: left;
     font-weight: bold;
